--- a/mqp_ws/src/panda_moveit_controller/config/panda_control.yaml
+++ b/mqp_ws/src/panda_moveit_controller/config/panda_control.yaml
@@ -28,3 +28,15 @@ panda:
             goal_time: 2.0
 
         state_publish_rate: 25
+
+    panda_hand_controller:
+        type: effort_controllers/JointTrajectoryController
+        joints:
+            - panda_finger_joint1
+            - panda_finger_joint2
+
+        gains:
+            panda_finger_joint1: { p: 5, d: 3.0, i: 0, i_clamp: 1 }
+            panda_finger_joint2: { p: 5, d: 1.0, i: 0, i_clamp: 1 }
+
+        state_publish_rate: 25
