--- a/mqp_ws/src/scrap_burning/package.xml
+++ b/mqp_ws/src/scrap_burning/package.xml
@@ -53,10 +53,24 @@
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
 
+  <depend>controller_interface</depend>
+  <depend>franka_hw</depend>
+  <depend>geometry_msgs</depend>
+  <depend>hardware_interface</depend>
+  <depend>libfranka</depend>
+  <depend>pluginlib</depend>
+  <depend>realtime_tools</depend>
 
+  <exec_depend>franka_control</exec_depend>
+  <exec_depend>franka_gripper</exec_depend>
+  <exec_depend>franka_description</exec_depend>
+  <exec_depend>panda_moveit_config</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>rosparam</exec_depend>
+  <exec_depend>rospkg</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <controller_interface plugin="${prefix}/scrap_burning_controllers.xml"/>
   </export>
 </package>
