--- a/mqp_ws/src/scrap_burning/cfg/plug_in_params.cfg
+++ b/mqp_ws/src/scrap_burning/cfg/plug_in_params.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "icra18"
+PACKAGE = "scrap_burning"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
