--- a/mqp_ws/src/scrap_burning/CMakeLists.txt
+++ b/mqp_ws/src/scrap_burning/CMakeLists.txt
@@ -8,19 +8,8 @@ project(scrap_burning)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-        controller_interface
-        franka_control
-        franka_hw
-        dynamic_reconfigure
-        hardware_interface
-        pluginlib
-        realtime_tools
-        roscpp
-        rospy
+  roscpp
 )
-
-find_package(Franka 0.4.0 REQUIRED)
-find_package(Eigen3 REQUIRED)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -111,6 +100,12 @@ find_package(Eigen3 REQUIRED)
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
+catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES scrap_burning
+#  CATKIN_DEPENDS roscpp
+#  DEPENDS system_lib
+)
 
 ###########
 ## Build ##
@@ -118,9 +113,9 @@ find_package(Eigen3 REQUIRED)
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-include_directories( include
-        ${catkin_INCLUDE_DIRS}
-        ${EIGEN3_INCLUDE_DIRS}
+include_directories(
+# include
+  ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -207,42 +202,3 @@ include_directories( include
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
-
-generate_dynamic_reconfigure_options(
-        cfg/plug_in_params.cfg
-)
-
-catkin_package(
-        #  INCLUDE_DIRS include
-        #  LIBRARIES scrap_burning
-        #  CATKIN_DEPENDS roscpp
-        #  DEPENDS system_lib
-)
-
-
-add_library(scrap_burning_controllers
-        src/plug_in_controller.cpp
-        )
-
-add_dependencies(scrap_burning_controllers
-        ${${PROJECT_NAME}_EXPORTED_TARGETS}
-        ${catkin_EXPORTED_TARGETS}
-        )
-
-target_link_libraries(scrap_burning_controllers PUBLIC
-        ${Franka_LIBRARIES}
-        ${catkin_LIBRARIES}
-        )
-
-target_include_directories(scrap_burning_controllers SYSTEM PUBLIC
-        ${Franka_INCLUDE_DIRS}
-        ${EIGEN3_INCLUDE_DIRS}
-        ${catkin_INCLUDE_DIRS}
-        )
-
-install(DIRECTORY config
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-        )
-install(DIRECTORY launch
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-        )
