--- a/mqp_ws/src/scrap_burning/CMakeLists.txt
+++ b/mqp_ws/src/scrap_burning/CMakeLists.txt
@@ -202,3 +202,6 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+catkin_install_python(PROGRAMS scripts/pcl_subscriber.py scripts/pcl_publisher.py
+        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+        )
