--- a/mqp_ws/src/scrap_burning/CMakeLists.txt
+++ b/mqp_ws/src/scrap_burning/CMakeLists.txt
@@ -203,6 +203,6 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
-catkin_install_python(PROGRAMS scripts/pcl_subscriber.py scripts/pcl_publisher.py
+catkin_install_python(PROGRAMS scripts/pcl_subscriber.py scripts/pcl_publisher.py scripts/talker_python.py
         DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
         )
